--- a/client-web/src/index.css
+++ b/client-web/src/index.css
@@ -14,6 +14,11 @@ html, body, .viewport, #root {
   margin: 0;
 }
 
+button a {
+  text-decoration: none;
+  color: black;
+}
+
 /* encapsulate the various syntax in helper clases */
 /* inspired by http://infrequently.org/2009/08/css-3-progress/ */
 
